# google-workspace-mcp

./: .gitignore  README.md  auth.py  pyproject.toml  server.py  tools_calendar.py  tools_contacts.py  tools_docs.py  tools_drive.py  tools_forms.py  tools_gmail.py  tools_meet.py  tools_sheets.py  tools_slides.py  tools_tasks.py
